[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/white.png" type="Texture" id=1]
[ext_resource path="res://prefab_scenes/DirectionalForcefield/DirectionalForceField.gd" type="Script" id=2]
[ext_resource path="res://prefab_scenes/obstacles/ItemUIData.gd" type="Script" id=3]
[ext_resource path="res://assets/images/directional_field_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/images/white_big_gradient_2_sides.png" type="Texture" id=5]
[ext_resource path="res://assets/images/triangle_64x64.png" type="Texture" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 64 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 64 )

[node name="DirectionalForcefield" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource( 1 )
script = ExtResource( 2 )

[node name="ItemUIData" type="Node2D" parent="."]
script = ExtResource( 3 )
item_ui_size = Vector2( 64, 64 )
item_ui_texture = ExtResource( 4 )
item_ui_color = Color( 0.639216, 1, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -60, 0 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.588235, 1, 1, 0.294118 )
position = Vector2( -56, 0 )
scale = Vector2( 0.4, 8 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -60, 0 )
scale = Vector2( 0.3, 1 )
texture = ExtResource( 5 )
color = Color( 0, 1, 1, 0.168627 )

[node name="EnteringArea" type="Area2D" parent="."]
position = Vector2( -52, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnteringArea"]
visible = false
shape = SubResource( 3 )

[node name="ExitingArea" type="Area2D" parent="."]
position = Vector2( -56, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitingArea"]
visible = false
shape = SubResource( 4 )

[node name="DirectionSprite" type="Sprite" parent="."]
modulate = Color( 0.588235, 1, 1, 0.588235 )
position = Vector2( -45, 0 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="DirectionSprite2" type="Sprite" parent="."]
modulate = Color( 0.588235, 1, 1, 0.588235 )
position = Vector2( -45, 26 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="DirectionSprite3" type="Sprite" parent="."]
modulate = Color( 0.588235, 1, 1, 0.588235 )
position = Vector2( -45, 52 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="DirectionSprite4" type="Sprite" parent="."]
modulate = Color( 0.588235, 1, 1, 0.588235 )
position = Vector2( -45, -26 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="DirectionSprite5" type="Sprite" parent="."]
modulate = Color( 0.588235, 1, 1, 0.588235 )
position = Vector2( -45, -52 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
[connection signal="body_entered" from="EnteringArea" to="." method="_on_EnteringArea_body_entered"]
[connection signal="body_exited" from="ExitingArea" to="." method="_on_ExitingArea_body_exited"]
